--- a/src/certificates/certficate.css
+++ b/src/certificates/certficate.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
   }
   .container {
-    width: 1200px;
+    width: 100%;
     margin: 0 auto;
     padding: 20px;
     border: 10px double black ;
@@ -54,8 +54,9 @@ body {
     text-align: center;
   }
   .right-header {
-    width: 15%;
+    width: 20%;
     text-align: left;
+    margin-right: 0px;
   }
   .left-content {
     width: 50%;
